# openssl-modern-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  OpenSSL.cpp  README.md  cert.pem  main.cpp  sonar-project.properties
.github/workflows/: cmake.yml  codeql.yml
src/: CMakeLists.txt  OpenSSL.cpp  OpenSSL.h  main.cpp
tst/: CMakeLists.txt  OpenSSL-test.cpp
tst/data/: 1000-sans-badssl-com-chain.pem  1000-sans-badssl-com.pem  Chain-Sectigo_UserTRUST_RSA.pem  Chain-Staat_der_Nederlanden_Organisatie.pem  Digidentity_BV_PKIoverheid_Organisatie_Persoon_CA_G3.pem  FAKE_USERTrust_RSA_Certification_Authority.pem  Fake-Chain-Sectigo_UserTRUST_RSA.pem  INCOMPLETE-expired-rsa-dv-ssl-com-chain.pem  Staat_der_Nederlanden_Root_CA.pem  chain-with-gibberish-intermidiate.pem  chain-with-gibberish-root.pem  example.org.crt  example.org.key  expired-rsa-dv-ssl-com-chain.pem  expired-rsa-dv-ssl-com.pem  expired.addtrusu.root.pem  expired.baddssl.com.chain.pem  gibberish.pem  raymii.org.2023.der  sign.tampered.sha256.txt  sign.txt.sha256  sign.txt.sha256.txt  tst_sign.crt  tst_sign.key
